syntax = "proto3";

package api.order;

option go_package = "go/generated/order";

import "google/protobuf/timestamp.proto";

enum Side {
  ORDER_SIDE_UNSPECIFIED = 0;
  BUY = 1;
  SELL = 2;
}

enum Type {
  ORDER_TYPE_UNSPECIFIED = 0;
  MARKET = 1;
  LIMIT = 2;
  STOP_LIMIT = 3;
  STOP_MARKET = 4;
}

enum Status {
  ORDER_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  OPEN = 2;
  PARTIAL_FILLED = 3;
  FILLED = 4;
  CANCELLED = 5;
  REJECTED = 6;
  EXPIRED = 7;
}

message CreateOrderResponse {
  string id = 1;
  string symbol = 2;
  uint64 price = 3;
  uint32 quantity = 4;
  Side side = 5;
  Type type = 6;
  string reason = 7;
  Status status = 8;
  string user_id = 9;
  google.protobuf.Timestamp client_timestamp = 10;
  google.protobuf.Timestamp engine_timestamp = 11;
}

message CreateOrderRequest {
  string symbol = 1;
  uint64 price = 2;
  uint32 quantity = 3;
  Side side = 4;
  Type type = 5;
  string user_id = 6;
  google.protobuf.Timestamp client_timestamp = 7;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}
